@@ -75,6 +75,16 @@ using http_connect_handler = std::function<void(http_connection&)>;
 using http_filter_handler = std::function<void(http_connection&, std::vector<tcp::endpoint>&)>;
 using hostname_filter_handler = std::function<bool(http_connection&, string_view)>;
 
+struct bind_info_t
+{
+	std::string device;
+	address ip;
+	bool operator==(bind_info_t const& rhs) const
+	{
+		return device == rhs.device && ip == rhs.ip;
+	}
+};
+
 // when bottled, the last two arguments to the handler
 // will always be 0
 struct TORRENT_EXTRA_EXPORT http_connection
@@ -109,7 +119,7 @@ struct TORRENT_EXTRA_EXPORT http_connection
 	void get(std::string const& url, time_duration timeout = seconds(30)
 		, aux::proxy_settings const* ps = nullptr, int handle_redirects = 5
 		, std::string const& user_agent = std::string()
-		, boost::optional<address> const& bind_addr = boost::optional<address>()
+		, boost::optional<bind_info_t> const& bind_addr = boost::none
 		, resolver_flags resolve_flags = resolver_flags{}, std::string const& auth_ = std::string()
 #if TORRENT_USE_I2P
 		, i2p_connection* i2p_conn = nullptr
@@ -119,7 +129,7 @@ struct TORRENT_EXTRA_EXPORT http_connection
 	void start(std::string const& hostname, int port
 		, time_duration timeout, aux::proxy_settings const* ps = nullptr
 		, bool ssl = false, int handle_redirect = 5
-		, boost::optional<address> const& bind_addr = boost::optional<address>()
+		, boost::optional<bind_info_t> const& bind_addr = boost::none
 		, resolver_flags resolve_flags = resolver_flags{}
 #if TORRENT_USE_I2P
 		, i2p_connection* i2p_conn = nullptr
@@ -141,8 +151,7 @@ private:
 	void on_i2p_resolve(error_code const& e
 		, char const* destination);
 #endif
-	void on_resolve(error_code const& e
-		, std::vector<address> const& addresses);
+	void on_resolve(error_code const& e, std::vector<address> const& addresses);
 	void connect();
 	void on_connect(error_code const& e);
 	void on_write(error_code const& e);
@@ -196,8 +205,8 @@ private:
 	// configured to use a proxy
 	aux::proxy_settings m_proxy;
 
-	// the address to bind to. unset means do not bind
-	boost::optional<address> m_bind_addr;
+	// the address and/or device to bind to. unset means do not bind
+	boost::optional<bind_info_t> m_bind_addr;
 
 	// if username password was passed in, remember it in case we need to
 	// re-issue the request for a redirect
