@@ -1,3 +1,4 @@
+	* fix bind-to-device for tracker announces and UPnP
 	* rename peer_tos setting to peer_dscp
 	* fix bdecode support for large strings (>= 100 MB)
 
